// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render with state 1`] = `
<ng-component
  testedWidget={[Function NgAisStats]}
>
  <ais-instantsearch>
    <ais-stats>
      <div
        class="ais-Stats"
      >
        
        
        <span
          class="ais-Stats-text"
        >
           100 results found in 123ms. 
        </span>
      </div>
    </ais-stats>
  </ais-instantsearch>
</ng-component>
`;

exports[`Stats should render without state 1`] = `
<ng-component
  testedWidget={[Function NgAisStats]}
>
  <ais-instantsearch>
    <ais-stats>
      <div
        class="ais-Stats"
      >
        
        
        <span
          class="ais-Stats-text"
        >
           0 results found in 0ms. 
        </span>
      </div>
    </ais-stats>
  </ais-instantsearch>
</ng-component>
`;
